# dovetail

./: .coveragerc  .gitignore  .gitlab-ci.yml  .gitreview  AUTHORS  ChangeLog  INFO  INFO.yaml  README.rst  build_sign.sh  ez_setup.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
Plugfest_Test_Plan/: TEST_PLAN_INFO
Plugfest_Test_Plan/02_Setup_and_Configurations/: dir.info.txt
Plugfest_Test_Plan/03_Deployment_Test_Cases/: dir.info.txt
Plugfest_Test_Plan/04_Network_Integration_Test_Cases/: dir.info.txt
Plugfest_Test_Plan/05_VNF_Application_Test_Cases/: dir.info.txt
Plugfest_Test_Plan/Test_Case_Template/: Test_Case_Template.odt
cvp/: install.sh  requirements.txt  setup.cfg
cvp/docker/: .gitignore  Dockerfile  Dockerfile.web  README.rst  config.env.sample  docker-compose.yml  docker-compose.yml.new  prepare-env.sh  start-nginx.sh  vhost.env.sample
cvp/etc/: config.ini
docker/: Dockerfile  Dockerfile.aarch64.patch  Dockerfile.centos7  ci_prepare.sh  dovetail-docker-env  get_db_schema.py  run-in-container
docs/: conf.py  conf.yaml  index.rst
dovetail/: constants.py  container.py  encrypt.py  parser.py  prepare_env.py  report.py  run.py  signature.py  test_runner.py  testcase.py
results/: dovetail.example.tc002.out  dovetail_report.txt
scripts/: container.py  parser.py  prepare_env.py  report.py  run.py  testcase.py
unittests/: requirements.txt  unittest.sh
userconfig/: defcore.txt  hosts.yaml  pod.yaml.sample  sdnvpn_config_testcase3.yaml  tempest.conf
utils/: init_db.py  launch_db.sh  restart_db.sh
(+618 files in other folders)
