[metadata]
name = dovetail
summary = Define and provide a set of OPNFV related validation criteria
description-file =
    README.rst
author = OPNFV
author-email = opnfv-tech-discuss@lists.opnfv.org
home-page = https://wiki.opnfv.org/display/dovetail

[entry_points]
console_scripts =
    dovetail = dovetail.main:main
