[metadata]
name = dovetail
summary = Define and provide a set of OPNFV related validation criteria
description-file =
    README.rst
author = OPNFV
author-email = opnfv-tech-discuss@lists.opnfv.org
home-page = https://wiki.opnfv.org/display/dovetail

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source

[entry_points]
console_scripts =
    dovetail = dovetail.main:main
