##############################################################################
# Copyright (c) 2019 opnfv.
#
# All rights reserved. This program and the accompanying materials
# are made available under the terms of the Apache License, Version 2.0
# which accompanies this distribution, and is available at
# http://www.apache.org/licenses/LICENSE-2.0
##############################################################################

[metadata]
name = dovetail
version = 2019.12
home-page = https://wiki.opnfv.org/display/dovetail

[files]

packages =
    dovetail

data_files =
    /etc/dovetail = etc/*


[entry_points]
console_scripts =
    dovetail = dovetail.cli.cli_base:cli
